fix: removed horizontal scrolling

--- a/containers/Events/Events.module.scss
+++ b/containers/Events/Events.module.scss
@@ -6,7 +6,7 @@
   }
   
   .parallax_container {
-    @apply font-bold font-montserrat text-gray-700 opacity-30 sm:text-[3rem] text-[1rem]  absolute top-[32rem] right-[2rem] md:left-[25rem] -z-50;
+    @apply font-bold font-montserrat text-gray-700 opacity-30 sm:text-[3rem] text-[1rem]  absolute top-[32rem] right-[4rem] md:left-[25rem] -z-50;
   }
 
   .laptop {
